# ChatStats

whatsapp_analyzer/: Cargo.toml
whatsapp_analyzer/src/: analyzer.rs  lib.rs
whatsapp_analyzer/tests/: integration_tests.rs
whatsapp_analyzer/tests/common/: mod.rs
