[package]
name = "whatsapp_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
fancy-regex = "0.12.0"
log = "0.4.20"
polars = { version = "0.35.4", features = ["lazy", "dtype-datetime"] }
